# cloud_haskell_example

./: CHANGELOG.md  README.md  distr.cabal  distr.cabal slave
app/: Main copy.hs  Main ping.hs  Main slave.hs  Main.hs  Main_both.hs  trigger_dev.json
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
