cabal-version:      2.4
name:               distr
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable distr
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.11.1.0,
                      distributed-process == 0.7.4,
                      network-transport-tcp == 0.8.1,
                      network-transport == 0.5.6,
                      bytestring == 0.10.8.2,
                      binary == 0.8.5.1,
                      bytestring >= 0.9 && < 0.12,
    hs-source-dirs:   app
    default-language: Haskell2010
